--- a/orgmode-sql.cabal
+++ b/orgmode-sql.cabal
@@ -51,12 +51,12 @@ library
                       ViewPatterns
 
   build-depends: base                    >= 4.4 && < 5.0
-               , mtl                     >= 2.2 && < 2.3
-               , orgmode-parse           >= 0.1 && < 0.2
-               , persistent              >= 2.2 && < 2.3
-               , persistent-template     >= 2.1 && < 2.2
-               , resourcet               >= 1.1 && < 1.2
-               , text                    >= 1.2 && < 1.3
+               , mtl                     >= 2.2
+               , orgmode-parse           >= 0.1
+               , persistent              >= 2.2
+               , persistent-template     >= 2.1
+               , resourcet               >= 1.1
+               , text                    >= 1.2
                , time
                , transformers
 
@@ -76,18 +76,18 @@ test-suite test
                       KindSignatures
 
   build-depends: base                    >= 4.4  && < 5.0
-               , attoparsec              >= 0.12 && < 0.13
-               , hspec                   >= 2.1  && < 2.2
-               , monad-control           >= 1.0  && < 1.1
-               , monad-logger            >= 0.3  && < 0.4
-               , mtl                     >= 2.2  && < 2.3
-               , orgmode-parse           >= 0.1  && < 0.2
-               , persistent              >= 2.2  && < 2.3
-               , persistent-sqlite       >= 2.2  && < 2.3
-               , persistent-template     >= 2.1  && < 2.2
-               , resourcet               >= 1.1  && < 1.2
-               , text                    >= 1.2  && < 1.3
-               , unordered-containers    >= 0.2  && < 0.3
+               , attoparsec              >= 0.12
+               , hspec                   >= 2.1
+               , monad-control           >= 1.0
+               , monad-logger            >= 0.3
+               , mtl                     >= 2.2
+               , orgmode-parse           >= 0.1
+               , persistent              >= 2.2
+               , persistent-sqlite       >= 2.2
+               , persistent-template     >= 2.1
+               , resourcet               >= 1.1
+               , text                    >= 1.2
+               , unordered-containers    >= 0.2
                , directory
                , orgmode-sql
                , time
