--- a/orgmode-sql.cabal
+++ b/orgmode-sql.cabal
@@ -59,6 +59,7 @@ library
                , text                    >= 1.2
                , time
                , transformers
+               , esqueleto
 
   default-language:    Haskell2010
 
