--- a/orgmode-sql.cabal
+++ b/orgmode-sql.cabal
@@ -57,9 +57,9 @@ library
                , persistent-template     >= 2.1
                , resourcet               >= 1.1
                , text                    >= 1.2
+               , esqueleto               >= 2.4
                , time
                , transformers
-               , esqueleto
 
   default-language:    Haskell2010
 
