--- a/orgmode-sql.cabal
+++ b/orgmode-sql.cabal
@@ -32,6 +32,7 @@ library
 
   default-extensions: CPP
                       DeriveDataTypeable
+                      DeriveGeneric
                       EmptyDataDecls
                       FlexibleContexts
                       FlexibleInstances
@@ -60,6 +61,7 @@ library
                , esqueleto               >= 2.4
                , time
                , transformers
+               , aeson
 
   default-language:    Haskell2010
 
