--- a/orgmode-sql.cabal
+++ b/orgmode-sql.cabal
@@ -68,7 +68,7 @@ library
 
 test-suite test
   type:           exitcode-stdio-1.0
-  main-is:        Spec.hs
+  main-is:        Test.hs
   hs-source-dirs: test
 
   ghc-options:
