--- a/orgmode-sql.cabal
+++ b/orgmode-sql.cabal
@@ -28,6 +28,7 @@ library
                  , Database.OrgMode.Query.Tag
                  , Database.OrgMode.Query.TagRel
                  , Database.OrgMode.Import
+                 , Data.OrgMode.Export.Text
 
   ghc-options:
         -Wall
@@ -66,6 +67,7 @@ library
                , time
                , transformers
                , aeson
+               , text-format
 
   default-language:    Haskell2010
 
