--- a/orgmode-sql.cabal
+++ b/orgmode-sql.cabal
@@ -71,6 +71,38 @@ library
 
   default-language:    Haskell2010
 
+executable orgmode-sql-demo
+  main-is:        Main.hs
+  hs-source-dirs: executable
+
+  ghc-options:
+        -Wall
+
+  default-extensions: FlexibleContexts
+                      OverloadedStrings
+                      Rank2Types
+                      KindSignatures
+
+  build-depends: base                    >= 4.4  && < 5.0
+               , attoparsec              >= 0.12
+               , hspec                   >= 2.1
+               , monad-control           >= 1.0
+               , monad-logger            >= 0.3
+               , mtl                     >= 2.2
+               , orgmode-parse           >= 0.1
+               , persistent              >= 2.2
+               , persistent-sqlite       >= 2.2
+               , persistent-template     >= 2.1
+               , resourcet               >= 1.1
+               , text                    >= 1.2
+               , unordered-containers    >= 0.2
+               , directory
+               , orgmode-sql
+               , time
+               , transformers
+
+  default-language:    Haskell2010
+
 test-suite test
   type:           exitcode-stdio-1.0
   main-is:        Test.hs
