--- a/orgmode-sql.cabal
+++ b/orgmode-sql.cabal
@@ -18,7 +18,7 @@ library
   hs-source-dirs: lib
 
   exposed-modules: Database.OrgMode
-                 , Database.OrgMode.Compose.Text
+                 , Database.OrgMode.Render.OrgModeText
                  , Database.OrgMode.Export
                  , Database.OrgMode.Import
                  , Database.OrgMode.Internal.Import
