--- a/orgmode-sql.cabal
+++ b/orgmode-sql.cabal
@@ -56,20 +56,20 @@ library
                       TypeFamilies
                       ViewPatterns
 
-  build-depends: base                    >= 4.4 && < 5.0
+  build-depends: aeson                   >= 0.8
                , attoparsec              >= 0.12
+               , base                    >= 4.4 && < 5.0
+               , esqueleto               >= 2.4
                , mtl                     >= 2.2
                , orgmode-parse           >= 0.1
                , persistent              >= 2.2
                , persistent-template     >= 2.1
                , resourcet               >= 1.1
                , text                    >= 1.2
-               , esqueleto               >= 2.4
-               , unordered-containers    >= 0.2
+               , text-format             >= 0.3
                , time
                , transformers
-               , aeson
-               , text-format
+               , unordered-containers    >= 0.2
 
   default-language:    Haskell2010
 
@@ -84,23 +84,23 @@ executable orgmode-sql-demo
                       OverloadedStrings
                       Rank2Types
 
-  build-depends: base                    >= 4.4  && < 5.0
-               , attoparsec              >= 0.12
+  build-depends: attoparsec              >= 0.12
+               , base                    >= 4.4  && < 5.0
+               , directory
                , hspec                   >= 2.1
                , monad-control           >= 1.0
                , monad-logger            >= 0.3
                , mtl                     >= 2.2
                , orgmode-parse           >= 0.1
+               , orgmode-sql
                , persistent              >= 2.2
                , persistent-sqlite       >= 2.2
                , persistent-template     >= 2.1
                , resourcet               >= 1.1
                , text                    >= 1.2
-               , unordered-containers    >= 0.2
-               , directory
-               , orgmode-sql
                , time
                , transformers
+               , unordered-containers    >= 0.2
 
   default-language:    Haskell2010
 
@@ -117,23 +117,23 @@ test-suite test
                       Rank2Types
                       KindSignatures
 
-  build-depends: base                    >= 4.4  && < 5.0
-               , attoparsec              >= 0.12
+  build-depends: attoparsec              >= 0.12
+               , base                    >= 4.4  && < 5.0
+               , directory
                , hspec                   >= 2.1
                , monad-control           >= 1.0
                , monad-logger            >= 0.3
                , mtl                     >= 2.2
                , orgmode-parse           >= 0.1
+               , orgmode-sql
                , persistent              >= 2.2
                , persistent-sqlite       >= 2.2
                , persistent-template     >= 2.1
                , resourcet               >= 1.1
                , text                    >= 1.2
-               , unordered-containers    >= 0.2
-               , directory
-               , orgmode-sql
                , time
                , transformers
+               , unordered-containers    >= 0.2
 
   default-language:    Haskell2010
 
@@ -165,24 +165,24 @@ benchmark bench
                         KindSignatures
 
     build-depends: aeson
+                 , abstract-par            >= 0.3
                  , attoparsec              >= 0.12
+                 , base                    >= 4.4  && < 5.0
+                 , criterion               >= 1.1
+                 , directory
                  , monad-control           >= 1.0
                  , monad-logger            >= 0.3
                  , mtl                     >= 2.2
                  , orgmode-parse           >= 0.1
+                 , orgmode-sql
                  , persistent              >= 2.2
                  , persistent-sqlite       >= 2.2
                  , persistent-template     >= 2.1
                  , resourcet               >= 1.1
                  , text                    >= 1.2
-                 , unordered-containers    >= 0.2
-                 , abstract-par
-                 , base
-                 , criterion
-                 , directory
-                 , orgmode-sql
                  , time
                  , transformers
+                 , unordered-containers    >= 0.2
 
   default-language: Haskell2010
 
