--- a/orgmode-sql.cabal
+++ b/orgmode-sql.cabal
@@ -25,6 +25,7 @@ library
                  , Database.OrgMode.Internal.PersistDerive
                  , Database.OrgMode.Types
                  , Database.OrgMode.Query.Clock
+                 , Database.OrgMode.Query.ClockTable
                  , Database.OrgMode.Query.Document
                  , Database.OrgMode.Query.Heading
                  , Database.OrgMode.Query.Planning
@@ -70,6 +71,7 @@ library
                , time
                , transformers
                , unordered-containers    >= 0.2
+               , data-default
 
   default-language:    Haskell2010
 
@@ -120,6 +122,7 @@ test-suite test
                , time
                , transformers
                , unordered-containers    >= 0.2
+               , data-default
 
   default-language:    Haskell2010
 
