--- a/orgmode-sql.cabal
+++ b/orgmode-sql.cabal
@@ -172,6 +172,7 @@ benchmark bench
                  , time
                  , transformers
                  , unordered-containers    >= 0.2
+                 , data-default
 
   default-language: Haskell2010
 
